--- a/thesis/06-conclusions.tex
+++ b/thesis/06-conclusions.tex
@@ -24,11 +24,10 @@ since its original publication.
 In Chapter \ref{chap:experiments}, we aim at improving our \acs{ctc}-based
 approach by using knowledge distillation using a strong \ac{ar} teacher model.
 We compare our results to both the \acs{wmt}~14 benchmark and the results of
-the \acs{wmt}~21 Efficient Translation Shared Task
-\citep{heafield-etal-2021-findings}. We find that even though our models are
-among the best performing on \acs{wmt}~14, there is a large room for
-improvement when we compare them to highly optimized \acl{ar} models submitted
-to the efficiency task.
+the \acs{wmt}~21 Efficiency Shared Task \citep{heafield-etal-2021-findings}. We
+find that even though our models are among the best performing on \acs{wmt}~14,
+there is a large room for improvement when we compare them to highly optimized
+\acl{ar} models submitted to the efficiency task.
 
 To conclude, over the past few years, the research community has set its hopes
 on the \ac{nar} models because, in theory, the decoding has lower time
