--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -179,7 +179,7 @@
   |------------------+-------+-------+-------+-------+-------+-------+------+------|
   | Batch @ 36 Cores |     1 |     2 |     4 |     8 |    16 |    32 |   64 |  128 |
   |------------------+-------+-------+-------+-------+-------+-------+------+------|
-  | AR Big           | 52087 |       | 23478 | 16731 | 12166 | 10151 | 9370 | 9244 |
+  | AR Big           | 52087 | 33189 | 23478 | 16731 | 12166 | 10151 | 9370 | 9244 |
   | AR Base          | 16293 |  9727 |  7191 |  5420 |  3635 |  2925 | 2707 | 2664 |
   |------------------+-------+-------+-------+-------+-------+-------+------+------|
   | Large            | 14542 | 11320 |  9534 |  8657 |  8357 |  8247 | 8238 |      |
