--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -10,11 +10,11 @@
 
 % fix pdfx
 \usepackage{etoolbox}
-\makeatletter
-\@ifl@t@r\fmtversion{2021-06-01}%
- {\AddToHook{package/after/xmpincl}
-   {\patchcmd\mcs@xmpincl@patchFile{\if\par}{\ifx\par}{}{\fail}}}{}
-\makeatother
+% \makeatletter
+% \@ifl@t@r\fmtversion{2021-06-01}%
+%  {\AddToHook{package/after/xmpincl}
+%    {\patchcmd\mcs@xmpincl@patchFile{\if\par}{\ifx\par}{}{\fail}}}{}
+% \makeatother
 
 
 \usepackage[usenames,dvipsnames,svgnames,table,rgb]{xcolor}
