autoreferat almost done

--- a/thesis/autoreferat/autoreftitle.tex
+++ b/thesis/autoreferat/autoreftitle.tex
@@ -63,7 +63,7 @@ Prague \YearSubmitted
 \noindent
 The results of this thesis were achieved in the period of a doctoral study at
 the Faculty of Mathematics and Physics, Charles University in years
-2013--2019.
+2014--2021.
 
 \vspace{5mm}
 
@@ -88,7 +88,7 @@ the Faculty of Mathematics and Physics, Charles University in years
 \vspace{1mm}
 
 \noindent
-The thesis defence will take place on June 13, 2019 at 10:10 a.m.\ in front of a
+The thesis defence will take place on February 9, 2022 at 2:00 p.m.\ in front of a
 committee for thesis defences in the branch Mathematical Linguistics at the
 Faculty of Mathematics and Physics, Charles University, Malostranské
 nám.\ 25, Prague 1, room S1.
@@ -114,7 +114,7 @@ Prague~2.
 \vspace{1mm}
 
 \noindent
-This abstract was distributed on May 23, 2019.
+This abstract was distributed on January 18, 2022
 
 
 \clearpage
@@ -182,7 +182,7 @@ Praha \YearSubmitted
 \noindent
 Disertační práce byla vypracována na základě výsledků získaných během
 doktorského studia na Matematicko-fyzikální fakultě Univerzity Karlovy v letech
-2013--2019.
+2014--2021.
 
 \vspace{2mm}
 
@@ -208,7 +208,7 @@ doktorského studia na Matematicko-fyzikální fakultě Univerzity Karlovy v let
 
 
 \noindent
-Obhajoba disertační práce se koná dne 13.\ června 2019 v 10:10 před komisí pro
+Obhajoba disertační práce se koná dne 9.\ února 2019 ve 14:00 před komisí pro
 obhajoby disertačních prací v oboru Matematická lingvistika na
 Matematicko-fyzikální fakultě UK, Malostranské nám.\ 25, Praha 1, v místnosti S1.
 
@@ -232,7 +232,7 @@ Matematicko-fyzikální fakulty UK, Ke Karlovu 3, Praha 2.
 \vspace{1mm}
 
 \noindent
-Autoreferát byl rozeslán dne 23.\ května 2018.
+Autoreferát byl rozeslán dne 18.\ ledna 2022.
 
 \clearpage
 
