--- a/thesis/autoreferat/main.tex
+++ b/thesis/autoreferat/main.tex
@@ -182,32 +182,30 @@
 }
 
 \def\OpponentA{
- & prof.\ Lucia Specia, Ph.D. \\
- & Department of Computing \\
- & Faculty of Engineering \\
- & Imperial College London \\
- & 180 Queen's Gate, South Kensington, London, United Kingdom  \\
+ & Kevin Duh, PhD. \\
+ & Human Language Technology Center of Excellence \\
+ & Johns Hopkins University \\
+ & 810 Wyman Park Drive, Baltimore, MD, USA \\
 }
 \def\OpponentAcs{
- & prof.\ Lucia Specia, Ph.D. \\
- & Department of Computing \\
- & Faculty of Engineering \\
- & Imperial College London \\
- & 180 Queen's Gate, South Kensington, Londýn, Spojené království  \\
+ & Kevin Duh, PhD. \\
+ & Human Language Technology Center of Excellence \\
+ & Johns Hopkins University \\
+ & 810 Wyman Park Drive, Baltimore, MD, USA \\
 }
 \def\OpponentB{
- & Ing.\ Jan Čech, Ph.D. \\
- & Department of Cybernetics \\
- & Faculty of Electrical Engineering \\
- & Czech Technical University  \\
- & Karlovo naměstí 13, 121 35 Prague~2, Czech Republic \\
+ & Mgr.\ Martin Popel, Ph.D. \\
+ & Institute of Formal and Applied Linguistics \\
+ & Faculty of Mathematics and Physics \\
+ & Charles University  \\
+ & Malostranské naměstí 25, 118 00 Prague~1, Czech Republic \\
 }
 \def\OpponentBcs{
- & Ing.\ Jan Čech, Ph.D. \\
- & Katedra kybernetiky \\
- & Fakulta elektrotechnická \\
- & České vysoké učení technické  \\
- & Karlovo naměstí 13, 121 35 Praha~2 \\
+ & Mgr.\ Martin Popel, Ph.D. \\
+ & Ústav formální a aplikované lingvistiky \\
+ & Matematicko-fyzikální fakulta \\
+ & Univerzita Karlova  \\
+ & Malostranské naměstí 25, 118 00 Praha~1, Czech Republic \\
 }
 %
 
