--- a/thesis/autoreferat/main.tex
+++ b/thesis/autoreferat/main.tex
@@ -182,16 +182,20 @@
 }
 
 \def\OpponentA{
- & Kevin Duh, PhD. \\
- & Human Language Technology Center of Excellence \\
- & Johns Hopkins University \\
- & 810 Wyman Park Drive, Baltimore, MD, USA \\
+  & Kevin Duh, PhD. \\
+  & Department of Computer Science \\
+  & Center for Language and Speech Processing \\
+  & Johns Hopkins University \\
+  & HLTCOE Stieff Building / 810 Wyman Park Drive \\
+  & Baltimore, MD 21211-2840, USA \\
 }
 \def\OpponentAcs{
- & Kevin Duh, PhD. \\
- & Human Language Technology Center of Excellence \\
- & Johns Hopkins University \\
- & 810 Wyman Park Drive, Baltimore, MD, USA \\
+  & Kevin Duh, PhD. \\
+  & Department of Computer Science \\
+  & Center for Language and Speech Processing \\
+  & Johns Hopkins University \\
+  & HLTCOE Stieff Building / 810 Wyman Park Drive \\
+  & Baltimore, MD 21211-2840, USA \\
 }
 \def\OpponentB{
  & Mgr.\ Martin Popel, Ph.D. \\
